Core/objects/RecommendedArticle__c/RecommendedArticle__c.object-meta.xml
<CustomObject>
    <description>A recommended programming blog article or other resource.</description>
    <label>Recommended Article</label>
    <nameField>
        <displayFormat>RA-{0000000}</displayFormat>
        <label>Recommended Article Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommended Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>