Core/objects/RecommendedArticle__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <formula>IF(CONTAINS(URL__c, &quot;https://developer.salesforce.com/blogs&quot;), &quot;Salesforce Developers Blog&quot;,
  IF(CONTAINS(URL__c, &quot;https://medium.com/salesforce-architects&quot;), &quot;Salesforce Architects&quot;,
    IF(CONTAINS(URL__c, &quot;https://www.jamessimone.net/blog/joys-of-apex&quot;), &quot;Joys of Apex&quot;,
      IF(CONTAINS(URL__c, &quot;salesforceben.com&quot;), &quot;Salesforce Ben&quot;,
        IF(CONTAINS(URL__c, &quot;https://medium.com/geekculture&quot;), &quot;Medium&quot;,
          IF(CONTAINS(URL__c, &quot;https://engineering.salesforce.com&quot;), &quot;Salesforce Engineering&quot;,
            IF(CONTAINS(URL__c, &quot;https://wiki.sfxd.org&quot;), &quot;SFXD&quot;, &quot;&quot;)
          )
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site</label>
    <type>Text</type>
</CustomField>