Core/objects/RecommendedArticle__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>The URL for the article or other resource.</description>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>